assignment.1/main.tf
resource "aws_instance" "wordpress" {
  ami           = data.aws_ami.amazon_linux.id
  instance_type = var.instance_type
  subnet_id     = "subnet-06b87fca1146055b9"

  associate_public_ip_address = true

  user_data = file("userdata.sh")

  vpc_security_group_ids = [
    aws_security_group.wordpress.id
  ]

  tags = {
    Name = "wordpress-server"
  }

}

data "aws_vpc" "existing" {
  id = "vpc-0f6b4090986bfa7d2"
}

data "aws_ami" "amazon_linux" {
  most_recent = true

  owners = ["amazon"]

  filter {
    name   = "name"
    values = ["al2023-ami-*-x86_64"]
  }
}
